hard-gists/07cdfc2826a565b50a68/run.log
=== Docker Run Log for 07cdfc2826a565b50a68 ===
Started at: Mi 29. Okt 11:29:44 CET 2025

[2025-10-29 11:29:45] START: Running container for 07cdfc2826a565b50a68
[2025-10-29 11:29:45] SUCCESS: Container 05918c5b1010375cbdb5cccdcf825acf193f82a4dbc40d4a8cbc146e4e2b351c started for 07cdfc2826a565b50a68
=== Container logs for 07cdfc2826a565b50a68 ===
  File "/snippet.py", line 47
    print decrypted
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 07cdfc2826a565b50a68 ===
[2025-10-29 11:29:47] INFO: Container 05918c5b1010375cbdb5cccdcf825acf193f82a4dbc40d4a8cbc146e4e2b351c has stopped
